--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,534 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import "~font-awesome/css/font-awesome.css";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800,600);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+body{
+    background-color: #FFF;
+    font-family:'Open Sans',sans-serif;    
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+    overflow: auto;
+}
+.stn-form-group {    
+    display: block;
+    width: 100%;
+    box-sizing: border-box;    
+    margin-left: 30px;
+}
+.stn-form-group label {
+    margin-bottom: 0;
+    display: inline-block;
+    width: 200px;
+    vertical-align: middle;
+    font-size: 8pt;
+    font-weight: bold;
+}
+.stn-form-group span {
+    vertical-align: middle;
+    width: auto;
+    display: inline-block;
+}
+.pull-left h3{
+    font-weight: 400;
+    line-height: 26.4px;
+    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+    font-size: 24px;
+}
+.table {
+    width: 75%;
+}
+table thead{
+    font-size: 14px;    
+}
+.table thead>tr>th {
+    border-top: none;
+}
+.table tbody>tr>td {
+   font-size: 14px;
+   font-weight: 200;
+}
+span{
+    font-size:14px;
+    line-height: 20px;
+    font-weight: 200;
+    
+}
+@media (min-width: 1200px) {
+    .container {
+        width: 1800px !important;
+    }
+}
+table {
+    width: 75%;
+}
+.center-all{
+    display:block;
+    text-align:center
+}
+.importantMessage h1{
+    margin:0 auto;
+    padding:35px 0 15px 0;
+    font-size:10pt;
+    font-weight:bolder;
+    text-align:center;
+    font-weight:900;
+    color:#7984DD;
+    font-family:'Open Sans',sans-serif
+}
+.importantMessage p{
+    display:block;
+    box-sizing:border-box;
+    padding:0 10px;
+    font-size:8pt;
+    font-weight:400;
+    color:#696F81;
+    line-height:1.5em;
+    margin:0 auto
+}
+*{
+    outline:none !important
+}
+a{
+    color:#0A354D;
+    font-weight:bolder;
+    transition:all .15s;
+    text-decoration:none;
+    outline:none
+}
+a:hover{
+    transition:all .15s;
+    color:#010609;
+    text-decoration:none
+}
+a:focus,a:active{
+    text-decoration:none;
+    color:#2068C5;
+    outline:none
+}
+p{
+    font-family:'Montserrat',sans-serif;
+    font-weight:lighter
+}
+label{
+    display:block;
+    width:100%;
+    text-transform:uppercase;
+    font-weight:900;
+    font-size:8pt;
+    font-family:'Montserrat',sans-serif;
+    color:#696F81;
+    letter-spacing:1px
+}
+.app-nav{
+    display:block;width:100%;background-color:#0A354D;border-radius:0;box-sizing:border-box;
+    margin:0 auto;box-shadow:0 1px 5px rgba(0,0,0,0.15);padding:0
+}
+.app-nav h1.nav-header{
+    background-color:#2068C5;color:#F4F4F4;font-family:'Montserrat',sans-serif;margin:0 auto;
+    padding:0;font-size:12pt;text-transform:uppercase;font-weight:lighter;
+    letter-spacing:2px;display:inline-block;box-sizing:border-box;
+    padding:15px 35px;vertical-align:middle
+}
+.app-nav .nav-change-session{
+    display:inline-block;vertical-align:middle;width:auto;box-sizing:border-box;
+    height:47px;background-color:#FFF;padding:0 15px;border-radius:0
+}
+.app-nav .nav-session-label{
+    display:inline-flex;flex-direction:column;
+    justify-content:center;height:47px;vertical-align:top;box-sizing:border-box;
+    color:#F4F4F4;padding:10px 0 10px 25px;font-family:'Montserrat',sans-serif;
+    font-weight:900;font-size:8pt;letter-spacing:1px;text-transform:uppercase
+}
+.app-nav .nav-userctrl{
+    display:inline-block;
+    float:right;
+    height:47px;vertical-align:top;
+    box-sizing:border-box;padding:6px 35px 6px 20px;text-align:right
+}
+.app-nav .nav-userctrl span{
+    color:rgba(244,244,244,0.5);display:block;font-family:'Montserrat',sans-serif;
+    font-size:9pt;font-weight:900;text-align:right;letter-spacing:1px
+}
+.app-nav .nav-userctrl span a{
+    color:rgba(244,244,244,0.75);
+    transition:all .15s
+}
+.app-nav .nav-userctrl span a:hover{
+    color:#F4F4F4;transition:all .15s
+}
+.app-nav .nav-userctrl button{
+    display:block;background-color:transparent;font-family:'Montserrat',sans-serif;
+    font-weight:900;padding:0;margin:0 auto;text-align:left;float:left;
+    letter-spacing:1px;border:none;font-size:9pt;width:50%;color:#F4F4F4;transition:all .15s
+}
+.app-nav .nav-userctrl button:hover{
+    transition:all .15s;color:#2068C5
+}
+.app-nav div.subnav{
+    display:block;width:100%;background-color:#072434
+}
+.app-nav div.subnav .subnav-links{
+    list-style-type:none;padding:0;margin:0 auto;display:inline-block;vertical-align:top
+}
+.app-nav div.subnav .subnav-links li{
+    display:inline-block
+}
+.app-nav div.subnav .subnav-links li a{
+    box-sizing:border-box;padding:12px 20px;display:block;color:#F4F4F4;
+    font-family:'Montserrat',sans-serif;font-weight:900;font-size:10pt;
+    border-top:4px solid transparent;border-bottom:4px solid transparent;
+    text-transform:uppercase;letter-spacing:1px;
+}
+.app-nav div.subnav .subnav-links li a.active{
+    background-color:#0A354D
+}
+.app-nav div.subnav .subnav-links li a.active:hover,.app-nav div.subnav .subnav-links li a.active:active,.app-nav div.subnav .subnav-links li a.active:focus{
+    border-bottom:4px solid transparent
+}
+.app-nav div.subnav .subnav-links li a:hover{
+    border-bottom:4px solid #2068C5
+}
+.app-nav div.subnav .subnav-links li a:active,.app-nav div.subnav .subnav-links li a:focus{
+    border-bottom:4px solid #2068C5
+}
+.app-nav div.subnav .subnav-right{
+    display:inline-block;vertical-align:top;float:right;
+}
+.app-nav div.subnav .subnav-right .btn-subnav{
+    background-color:transparent;box-sizing:border-box;padding:12px 20px;
+    border:none;display:inline-block;color:#F4F4F4;font-family:'Montserrat',sans-serif;
+    font-weight:900;font-size:10pt;border-top:4px solid transparent;
+    border-bottom:4px solid transparent;text-transform:uppercase;
+    letter-spacing:1px;transition:all .15s
+}
+.app-nav div.subnav .subnav-right .btn-subnav:hover{
+    border-bottom:4px solid #F4F4F4;transition:all .15s
+}
+.app-nav div.subnav .subnav-right .btn-subnav:active,.app-nav div.subnav .subnav-right .btn-subnav:focus{
+    transition:all .15s
+}
+.app-nav div.subnav .subnav-right .dropdown-menu{
+    margin:0 auto;padding:0;width:180px;left:-80 !important;margin-left:51px;border-radius:0;
+    background-color:#FFF;border:none;box-shadow:0 3px 6px rgba(0,0,0,0.16),0 3px 6px rgba(0,0,0,0.23)
+}
+.app-nav div.subnav .subnav-right .dropdown-menu li{
+    display:block
+}
+.app-nav div.subnav .subnav-right .dropdown-menu li a{
+    display:block;width:100%;letter-spacing:1px;text-transform:uppercase;
+    color:rgba(10,53,77,0.8);font-size:10pt;font-family:'Montserrat',sans-serif;
+    font-weight:900;box-sizing:border-box;padding:12px 15px;
+    border-bottom:1px solid #CCDEE3;border-left:4px solid transparent;
+    border-radius:4px solid transparent;transition:all .15s
+}
+.app-nav div.subnav .subnav-right .dropdown-menu li a:hover{
+    color:#0A354D;border-left:4px solid #2068C5;
+    background-color:transparent;background:none;transition:all .15s
+}
+.app-nav div.searchnav{
+    display:block;width:100%;background-color:#FFF;border-bottom:1px solid #CCDEE3
+}
+.app-nav div.searchnav .searchby{
+    display:inline-block;width:25%;width:calc(0px + 265px);box-sizing:border-box;
+    padding:0 25px;vertical-align:middle;border-right:1px solid #CCDEE3
+}
+.app-nav div.searchnav .searchby b{
+    display:block;color:#0A354D;letter-spacing:1px;font-weight:900;text-transform:uppercase
+}
+.app-nav div.searchnav .searchby .searchbyoption{
+    margin:0 auto;display:inline-block;text-transform:uppercase;
+    font-weight:900;font-size:8pt;font-family:'Montserrat',sans-serif;color:#0A354D;
+    letter-spacing:1px;box-sizing:border-box;padding:0 15px 0 0
+}
+.app-nav div.searchnav .searchby .searchbyoption input{
+    display:inline-block;margin-right:5px
+}
+.app-nav div.searchnav .search-input{
+    vertical-align:middle;display:inline-block;width:75%;width:calc(100% - 265px)
+}
+.app-nav div.searchnav .search-input input{
+    width:80%;width:calc(100% - 232px);
+    box-sizing:border-box;display:inline-block;font-family:'Montserrat',sans-serif;
+    border:none;font-size:12pt;padding:15px 15px 14px 35px;
+    font-weight:900;vertical-align:top;letter-spacing:1px;color:#0A354D
+}
+.app-nav div.searchnav .search-input button{
+    box-sizing:border-box;display:inline-block;vertical-align:top;width:20%;
+    width:calc(0px + 232px);background-color:#2068C5;font-family:'Montserrat',sans-serif;
+    font-weight:900;color:#FFF;border-left:2px solid #1c5caf;
+    height:51px;text-transform:uppercase;font-size:10pt;letter-spacing:1px;transition:all .15s
+}
+.app-nav div.searchnav .search-input button:hover{
+    background-color:#1c5caf;transition:all .15s
+}
+.page-padding{
+    display:block;width:100%;box-sizing:border-box;padding:55px
+}
+.page-heading{
+    font-family:'Montserrat',sans-serif;font-weight:bolder
+}    
+.topPad {
+    padding-top: 20px;
+}
+.bottomPad {
+    padding-bottom: 20px;
+}
+.borderLess {
+    background: none;
+    border: none;
+}
+/* carousel settings for label on photo files */
+#usgsfooter {
+    clear: both;
+    font-size:small;
+    margin:0;
+}
+#usgsfooterbar {
+    background-color: #0a354d;
+    margin:0;
+    padding:4px;
+}
+#usgsfooterbar a:link, #usgsfooterbar a:visited {
+    color: #ffffff;
+    margin-right: 40px;
+    text-decoration: none;
+}
+#usgsfootertext {
+    margin:0;
+    padding:4px;
+}
+#usgsfootertext img {
+    border: medium none;
+    float:right;
+    margin-right:5px;
+}
+.active {
+    background: #007ACC;
+    color: #fff;
+}
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+}
+.loading
+{
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background:rgba(255,255,255,0.8);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4cffffff', endColorstr='#4cffffff'); /* IE */
+    z-index:9999;
+}
+.loadingcontent
+{
+    display:table;
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+}
+.loadingspinner
+{
+   display: table-cell;
+   vertical-align:middle;
+   width: 100%;
+   text-align: center;
+   font-size:larger;
+   padding-top:80px;
+}
+a.disabled {
+    color: #AAAAAA;
+    cursor: default;
+    pointer-events: none;
+    text-decoration: none;
+}
+/*!
+ * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+/* Toggle Styles */
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: absolute; /*set to absolute instead of fixed because wasn't scrolling for long sidebar*/
+    left: 250px;
+    margin-left: -130px;
+    width: 0;
+    height: 100%;
+    overflow-y: auto;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
+    #Sec1PDF td, #Sec2PDF td, #Sec3PDF td, #Sec5PDF td {
+        line-height: 10px;
+    }
+    #Sec1PDF thead tr, #Sec2PDF thead tr, #Sec3PDF thead tr, #Sec4PDF thead tr, #Sec5PDF thead tr {
+        margin-bottom: 5px;
+    }
+}
+.container {
+    width:100%
+}
+#site-loading
+{
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    /*background:rgba(255,255,255,0.8);*/
+    background:rgba(25,55,255,0.8);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#4cffffff', endColorstr='#4cffffff'); /* IE */
+    z-index:1000;
+}
+#site-loadingcontent
+{
+    display:table;
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+}
+#site-loadingspinner
+{
+    display: table-cell;
+    vertical-align:middle;
+    width: 100%;
+    text-align: center;
+    font-size:larger;
+    padding-top:80px;
+}
+.arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid black;
+    border-style: solid;
+    border-width: 0 5px 8.7px 5px;
+    border-color: transparent transparent #000000 transparent;
+}
+.info {
+    padding: 20px;
+    font-family: sans-serif;
+    font-size: 1em;
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #3D3938;
+}
